--- a/basic/style.css
+++ b/basic/style.css
@@ -6,6 +6,9 @@
 .img {
     @apply h-56 rounded-2xl mb-5 xl:h-64;
 }
+.responsive-Ul {
+    @apply flex flex-col items-center space-x-0 justify-end lg:flex-row lg:space-x-3 lg:right-10 md:flex-col md:space-x-0 md:items-center lg:absolute;
+}
 /* order is important if we put utilities first then custom classes so do same in html as well */
 @tailwind utilities;
 .darkMode {
